--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: <docker-username>/<repo-name>:latest
+          tags: harryallenp/firstcicdpipeline:latest
 
   deploy:
     runs-on: ubuntu-latest
